# ML-DM-in-Aerospace-Tech

./: .envrc  README.md  notes.tex  pyproject.toml
code/: parafac.py
