[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "icecream>=2.1.3",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "vsedov", email = "viv.sedov@hotmail.com"},
]
dependencies = [
    "numpy>=1.24.0",
    "tensorly>*",
    "tabulate>=0.9.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
